[WKP-1567] GUI upgrade should update config.yaml (#1678)
* [WKP-1567]GUI upgrade should update config.yaml

* Test to see if we need more time for the browser to start

* Only run ui upgrade when running in a component configuration

* Clear working directory before pull in upgrade test

* fix expected return code in upgrade test (200, not 204)

Co-authored-by: Jerry Jackson <jerry@weave.works>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -706,7 +706,7 @@ jobs:
           NUM_MASTERS: 3
           NUM_WORKERS: 1
           USE_LB: true
-          SKIP_COMPONENTS: true
+          SKIP_COMPONENTS: false
           UPGRADE_VERSIONS: '1.17.13,1.18.10,1.19.3'
 
   upgrade-to-latest-patch: &upgrade-ssh-gcp-centos
