Post release-2.4 merge fixes
- fix go.sum after merge
- defaultDeploymentRetries -> defaultRetries
- missed var in tw merge
- Update version in acceptance tests
- Switch nightly back to master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ workflows:
           filters:
             branches:
               only:
-                - release-2.4
+                - master
     jobs:
       - build
       - third-party-dependencies-check:
