--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ defaults: &defaults
   docker:
     - image: docker.io/weaveworks/wkp-wks-build:build-in-container-ade34cca
       environment:
-        GOFLAGS: -p=4  # see https://github.com/golang/go/issues/26186#issuecomment-435544512 for more info. Docker in Circle incorrectly reports number of CPUs and causes OOM errors
+        GOFLAGS: -p=4 # see https://github.com/golang/go/issues/26186#issuecomment-435544512 for more info. Docker in Circle incorrectly reports number of CPUs and causes OOM errors
         GOPATH: /go/
         SRCDIR: /src/github.com/weaveworks/wks
   working_directory: /src/github.com/weaveworks/wks
@@ -113,7 +113,8 @@ workflows:
           <<: *nightlyTestConfig
       - workspaces-tests:
           <<: *nightlyTestConfig
-
+      - ssh-key-file-variations:
+          <<: *nightlyTestConfig
   weekly:
     triggers:
       - schedule:
@@ -253,7 +254,7 @@ commands:
     parameters:
       version:
         type: string
-        default: "1.20.2"
+        default: '1.20.2'
     steps:
       - run:
           name: Create cluster
@@ -652,17 +653,55 @@ jobs:
 
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+
             go test -v -run TestFlavoredClusterCreation --timeout=99999s
             go test -v -run TestClusterCreation --timeout=99999s
+            ../bin/internal/run-integration-tests.sh destroy
+      - run:
+          # Ensures that the GCP resources are deleted even if the previous step fails
+          name: Destroy GCP resources
+          command: |
+            cd test/integration/test
+            ../bin/internal/run-integration-tests.sh destroy
+          when: on_fail
+
+  ssh-key-file-variations:
+    <<: *creation-ssh-gcp-centos
+    docker:
+      - image: quay.io/wks/build:master-134af34f
+        environment:
+          <<: *integrationTestCommonEnv
+          IMAGE_NAME: centos-cloud/centos-7
+          NUM_MASTERS: 1
+          NUM_WORKERS: 1
+          USE_LB: false
+          CLUSTER_VERSIONS: '1.20.2'
+          SKIP_COMPONENTS: true
+    steps:
+      - setup-integration-test-env
+      - run:
+          <<: *setup-base-gce-config-yaml
+      - run:
+          name: Run e2e tests
+          command: |
+            export PATH=$GOROOT/bin:$PATH
+
+            cd test/integration/test
+
+            lb_count=$([ "$USE_LB" == "true" ] && echo "1" || echo "0")
+            export NUM_HOSTS=$(($NUM_MASTERS + $NUM_WORKERS + $lb_count))
+            export USE_IMAGE=0
+            # provision GCE VMs
+            ../bin/internal/run-integration-tests.sh up
+            ../bin/internal/update-config-with-node-info.sh $NUM_MASTERS $USE_LB
+
+            # e.g. wkp-ci-test-bot from 1passwords
+            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+
             cp /root/.ssh/weaveworks_cit_id_rsa /root/.ssh/id_rsa
-
             go test -v -run TestDefaultSshKeyFile --timeout=99999s
-
             go test -v -run TestMissingSshKeyFile --timeout=99999s
-
             go test -v -run TestIncorrectSshKeyFile --timeout=99999s
-
-
 
             ../bin/internal/run-integration-tests.sh destroy
       - run:
