[WKP-1770] Update CI to run workspace tests nightly & 3rd party deps update
Update the CI tests to run workspaces_tests nightly and run the third-party check on every integration test run. We want to catch the third-party changes before branches are merged so that we can reduce the failures in the nightly tests.

Update the third-party deps to the latest values.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,10 @@ workflows:
       - workspaces-tests
       - existing-cluster-tests
       - cluster-components-on-kind-1-18
+      - build
+      - third-party-dependencies-check:
+          requires:
+            - build
 
   nightly:
     triggers:
@@ -106,6 +110,8 @@ workflows:
       - cluster-components-gcp:
           <<: *nightlyTestConfig
       - upgrade-to-latest-patch:
+          <<: *nightlyTestConfig
+      - workspaces-tests:
           <<: *nightlyTestConfig
 
   weekly:
