Add acceptance tests and refactor some existing code

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -8,6 +8,7 @@ sealedSecretsCertificate: ''
 sealedSecretsPrivateKey: ''
 enabledFeatures:
   teamWorkspaces: true
+  fleetManagement: true
 eksConfig:
   clusterRegion: 'eu-west-3'
   kubernetesVersion: '1.18'
