--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -602,7 +602,7 @@ jobs:
     working_directory: /home/circleci/src/github.com/weaveworks/wks
     steps:
       - setup-integration-test-env
-      - run: &setup-base-gce-config-yaml
+      - run:
           name: Setup base config.yaml
           command: |
             cd test/integration/test
