create a unique name for eksctl cluster creation so they don't fail when running ci simultaneously from different code bases (#1745)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -567,6 +567,8 @@ jobs:
             cd test/integration/test
             export AWS_ACCESS_KEY_ID=$WKP_EKS_AWS_ACCESS_KEY_ID
             export AWS_SECRET_ACCESS_KEY=$WKP_EKS_AWS_SECRET_ACCESS_KEY
+            eksctl get cluster
+            cat eks-cluster-template.yaml | sed -e "s/\${name}/$(date +%m%d%y-%s)/" > eks-cluster.yaml
             eksctl create cluster -f eks-cluster.yaml
 
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
