[WKP-1922] Add support for running mccp with an external postgres db (#1734)
* Adds support for postgres, refactors models
* Refactor git commit subscription to keep history
* Add config.yaml section on mccp database configuration
* Add docs on providing database credentials

Co-authored-by: Simon Howe <footless@gmail.com>

--- a/cmd/event-writer/test/02-deployment.yaml
+++ b/cmd/event-writer/test/02-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wkp-mccp-database-inspector
-  namespace: wkp-mccp
+  namespace: wkp-gitops-repo-broker
 spec:
   replicas: 1
   selector:
@@ -14,11 +14,11 @@ spec:
         app: mccp-database-inspector
     spec:
       nodeSelector:
-        mccp-dev-node: "true"
+        mccp-dev-node: 'true'
       containers:
         - name: inspector
           image: database-inspector-image
-          command: ["tail", "-f", "/dev/null"]
+          command: ['tail', '-f', '/dev/null']
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: database-volume
