--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -901,6 +901,7 @@ jobs:
           <<: *setup-base-gce-config-yaml
       - run:
           name: Run e2e tests
+          no_output_timeout: 20m
           command: |
             export PATH=$GOROOT/bin:$PATH
 
