[WKP-1960] Refactor acceptance tests to have multiple backends (#1773)
- Problem: its slow to run the acceptance tests against a real cluster
- Solution here:
  - Refactor the acceptance tests to have multiple "backends":
    - Database backend that mocks out the rest of the system.
    - Real backend that expects a cluster and kube context to exist so it can run kubectl apply commands

Allows us to iterate more quickly and easily before testing against a real system.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ workflows:
       - acceptance-tests:
           requires:
             - build
+            - ui-backend-integration-tests
 
   run-integration-tests:
     when: << pipeline.parameters.run_integration_tests >>
@@ -654,7 +655,7 @@ jobs:
             fi
 
             cd ../../integration/test
-            
+
             ../bin/internal/run-integration-tests.sh destroy
       - run:
           # Ensures that the GCP resources are deleted even if the previous step fails
@@ -1442,7 +1443,7 @@ jobs:
     steps:
       - checkout
       - add-go-mod-ssh-keys
-      - run: 
+      - run:
           name: Login at dockerhub
           command: |
             docker login -u ${DOCKER_IO_USER} -p ${DOCKER_IO_PASSWORD}
