added RHEL test cluster creation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -813,6 +813,19 @@ jobs:
           CLUSTER_VERSIONS: '1.18.16,1.19.8,1.20.2'
           SKIP_COMPONENTS: true
 
+  creation-ssh-gcp-rhel7-lb:
+    <<: *creation-ssh-gcp-centos
+    docker:
+      - image: quay.io/wks/build:master-134af34f
+        environment:
+          <<: *integrationTestCommonEnv
+          IMAGE_NAME: rhel-cloud/rhel-7-v20210217
+          NUM_MASTERS: 3
+          NUM_WORKERS: 1
+          USE_LB: false
+          CLUSTER_VERSIONS: '1.19.8'
+          SKIP_COMPONENTS: true
+
   creation-ssh-gcp-centos-lb:
     <<: *creation-ssh-gcp-centos
     docker:
