--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -822,7 +822,7 @@ jobs:
           IMAGE_NAME: rhel-cloud/rhel-7-v20210217
           NUM_MASTERS: 3
           NUM_WORKERS: 1
-          USE_LB: false
+          USE_LB: true
           CLUSTER_VERSIONS: '1.19.8,1.20.2'
           SKIP_COMPONENTS: true
 
