--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,10 @@ workflows:
           <<: *nightlyTestConfig
       - ssh-key-file-variations:
           <<: *nightlyTestConfig
+      - creation-ssh-gcp-rhel7-k8s120-lb:
+          <<: *nightlyTestConfig
+      - creation-ssh-gcp-rhel7-k8s119-lb:
+          <<: *nightlyTestConfig
 
   weekly:
     triggers:
@@ -813,7 +817,7 @@ jobs:
           CLUSTER_VERSIONS: '1.18.16,1.19.8,1.20.2'
           SKIP_COMPONENTS: true
 
-  creation-ssh-gcp-rhel7-lb:
+  creation-ssh-gcp-rhel7-k8s120-lb:
     <<: *creation-ssh-gcp-centos
     docker:
       - image: quay.io/wks/build:master-134af34f
@@ -826,7 +830,7 @@ jobs:
           CLUSTER_VERSIONS: '1.20.2'
           SKIP_COMPONENTS: true
 
-   creation-ssh-gcp-rhel7-lb:
+  creation-ssh-gcp-rhel7-k8s119-lb:
     <<: *creation-ssh-gcp-centos
     docker:
       - image: quay.io/wks/build:master-134af34f
