--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -648,7 +648,7 @@ jobs:
             export SELENIUM_DEBUG=true
             ../../../cmd/wk/wk ui --entitlements=../../ci-wks-unlimited.entitlements --launch-browser=false  &
             cd ../../acceptance/test/
-            go test -v
+            go test -v --timeout=99999s
 
             if [ $CLEANUP_REPO != "false" ]; then
               hub delete -y "${WKP_GITHUB_USER}/${CIRCLE_JOB}-${CIRCLE_BUILD_NUM}"
