Tail wks controller logs in upgrade tests (#1870)
* Store wks-controller logs in a text file and upload as circleci artifact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -999,6 +999,8 @@ jobs:
             cd test/integration/test
             ../bin/internal/run-integration-tests.sh destroy
           when: on_fail
+      - store_artifacts:
+          path: /tmp/wks-controller-logs.txt
 
   upgrade-ssh-gcp-centos-lb:
     <<: *upgrade-ssh-gcp-centos
