--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -23,8 +23,9 @@ service:
 config: # remember to consult `ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   demoMode: false
   featureGates:
-    teamWorkspaces: false
-    fleetManagement: false
+    dashboard: true
+    teamWorkspaces: true
+    fleetManagement: true
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
     url: ''
@@ -98,7 +99,6 @@ config: # remember to consult `ui/src/entities/config.ts` before making any chan
     provider: ''
     regions: ''
     track: ''
-    isManagementCluster: true
     managementClusterLink: ''
   homepage:
     alertNotifications:
