--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -21,6 +21,9 @@ dbConfig:
     databaseName: postgres
 
 gitopsRepoBroker:
+  gitRepo:
+    url: ''
+    branch: ''
   gitDeployKeySecretName: ''
   sshConfigMapName: ''
 
